@@ -1,3 +1,12 @@
+2006-08-17  Abel Cheung  <abel@oaka.org>
+
+	* tw2hk.pl:
+	- Allows multiple choice
+	- Add support for special tag inside comment, so that zh_HK
+	  translation inside comment would be used instead of automatically
+	  convert from zh_TW one
+	- Even more word conversions
+
 2006-08-16  Abel Cheung  <abel@oaka.org>
 
 	* tw2hk.pl: More word conversion list from wikipedia.
